[package]
    name    = "anystore"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    futures     = { version = "0.3" }
    parking_lot = "0.12"

    thiserror   = "1.0"
    derive_more = { version = "0.99" }

    # json
    serde_json = "1.0"
    serde      = { version = "1", features = ["derive"] }


    # chrono      = "0.4"
    # async-trait = "0.1"

    anyhow = { version = "1", features = ["backtrace"] }

    # async-recursion = "1"
    # pin-project     = "1"
    # # itertools       = "0.10"

    # async-stream = "0.3"

    # only for airbase
    reqwest    = { version = "0.11" }
    impl-tools = "0.6"

    # only for filestore
    tokio        = { version = "1", features = ["fs"] }
    tokio-stream = { version = "0.1", features = ["fs"] }


[dev-dependencies]
    uuid  = { version = "1.2", features = ["v4"] }
    tokio = { version = "1", features = ["rt", "macros"] }

    tokio-test = "0.4"

    # firestore  = "0.22"

    # feed-rs    = "1.2"
    # teloxide   = "0.11"
    # # atomic-instant = "0.1"
    # rand = "0.8"

    # # airable.rs from https://github.com/oxidecomputer/cio
    # reqwest            = { version = "0.11", features = ["json"] }
    # reqwest-middleware = "0.1"
    # reqwest-retry      = "0.1"
    # reqwest-tracing    = { version = "0.2.1", features = ["opentelemetry_0_17"] }
    # schemars           = { version = "0.8", features = ["chrono", "uuid"] }
